[Adjustment][CAMUS] VIsibility Issues
Fixed visibility issues with "The Team" section of the welcome page, also removed aboutUs About Us background to remove redundancy

--- a/welcome/aboutus.css
+++ b/welcome/aboutus.css
@@ -230,6 +230,12 @@ nav {
     flex: 1;
     padding: 20px;
 }
+.text-container-team {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+}
 
 .alternating-section .image-container img {
     width: 100%;
